kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - host: star-burger.test
    http:
      paths:
      - backend:
          serviceName: django
          servicePort: 80  
      - path: "/"
        pathType: Prefix
